syntax = "proto2";

package room;

// 补花
message RoomBuHuaInfo{
    optional uint64 player_id = 1; // 补花玩家ID
    repeated uint32 out_hua_cards =2; // 亮出的花牌
    repeated uint32 bu_cards = 3; // 补上的牌(仅自己可见)
}

message RoomBuHuaNtf{
    repeated RoomBuHuaInfo buhua_info = 1; // 补花通知
}
